tests/NormalTests/paczka1/small_fuzzy/97477579.err
Error in line 6: SFU A915 80,6
Error in line 10: SFU A544 71,0
